--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -25,6 +25,7 @@ yarn-error.log
 # Laravel 4 specific
 bootstrap/compiled.php
 app/storage/
+docker/data/mysql/
 
 # Laravel 5 & Lumen specific
 public/storage
