--- a/backend/.env.production
+++ b/backend/.env.production
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 # LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=sql_backend
+DB_HOST=erdert_db
 DB_PORT=3306
 DB_DATABASE=erdert
 DB_USERNAME=root
