--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,7 +10,9 @@ services:
             - ./.env.production:/var/www/html/erdert_backend/.env
         labels:
             - "traefik.enable=true"
-            - "traefik.http.routers.api.rule=Host(`api.app.localhost`)"
+            - "traefik.http.routers.api.rule=Host(`backend.erdert.dndnew.hu`)"
+            - "traefik.http.routers.api.entrypoints=websecure"
+            - "traefik.http.routers.api.tls.certresolver=myresolver"
         ports:
             - 8000:8000
         env_file:
