--- a/backend/Dockerfile.local
+++ b/backend/Dockerfile.local
@@ -48,7 +48,7 @@ WORKDIR /var/www/html/erdert_backend
 # RUN npm install
 
 COPY . /var/www/html/erdert_backend
-
+RUN composer install 
 EXPOSE 8000
 
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
