--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.app.rule=Host(`portal.erdert.dndnew.hu`)"
-      - "traefik.http.routers.main.entrypoints=websecure"
-      - "traefik.http.routers.main.tls.certresolver=myresolver"
+      - "traefik.http.routers.app.entrypoints=websecure"
+      - "traefik.http.routers.app.tls.certresolver=myresolver"
     ports:
       - 5174:5174
     networks:
