--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
@@ -20,6 +21,9 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.25",
     "@tanstack/react-query-devtools": "^4.32.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -28,15 +32,20 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "antd": "^5.7.3",
     "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
+    "axios-mock-adapter": "^1.22.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "history": "^5.3.0",
+    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.27",
     "react-router-dom": "^6.14.2",
     "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.6"
   }
 }
